--- a/Decimal to Hexadecimal.html
+++ b/Decimal to Hexadecimal.html
@@ -10,12 +10,12 @@
     </header>
     <form class="formDecimal">
       <h2 class="decimal">Enter Decimal Number</h2>
-      <p>(Only whole numbers)</p>
-      <input class="decimalNumber" type="number" min="0" value="16" />
+      <p>(Max. value for integer part: 9999999999999998)</p>
+      <input class="decimalNumber" type="number" value="16" />
     </form>
     <form class="formHexadecimal">
       <h2 class="hexadecimalNumber">Hexadecimal: #10</h2>
     </form>
-    <script src="Dec_to_Hexadec.js"></script>
+    <script src="Dec_to_Hexadec_v_1_1.js"></script>
   </body>
 </html>
