--- a/Decimal to Hexadecimal.html
+++ b/Decimal to Hexadecimal.html
@@ -16,6 +16,6 @@
     <form class="formHexadecimal">
       <h2 class="hexadecimalNumber">Hexadecimal: #10</h2>
     </form>
-    <script src="Dec_to_Hexadec_v_1_1.js"></script>
+    <script src="Dec_to_Hexadec.js"></script>
   </body>
 </html>
